--- a/src/stylesheet/PokeList.css
+++ b/src/stylesheet/PokeList.css
@@ -1,5 +1,9 @@
+.container {
+  width: 100%;
+}
 .itemContainer {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  padding: 5px;
+  justify-content: space-between;
 }
