--- a/src/stylesheet/PokeList.css
+++ b/src/stylesheet/PokeList.css
@@ -1,9 +1,15 @@
-.container {
+.pokeList {
+  border-color: violet;
   width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 .itemContainer {
+  width: 100%;
   display: flex;
   flex-direction: row;
   padding: 5px;
   justify-content: space-between;
+  background-color: teal;
 }
