--- a/src/stylesheet/PokeList.css
+++ b/src/stylesheet/PokeList.css
@@ -1,15 +1,21 @@
 .pokeList {
   border-color: violet;
-  width: 100%;
-  display: flex;
   flex-direction: row;
-  justify-content: center;
+  list-style: none;
 }
 .itemContainer {
   width: 100%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   padding: 5px;
+  row-gap: 20px;
   justify-content: space-between;
-  background-color: teal;
+}
+
+.tittle {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  display: flex;
+  justify-content: center;
 }
